grammar.js
    start: $ => choice(
      $.program_definition,
      $.copybook_definition
      //optional($.function_definition) //todo
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      choice($._IDENTIFICATION, $._ID_ABBR), $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(seq($.data_description, repeat1('.')))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      // Level 88 condition-name entries
      seq(
        $.level_number_88, $.entry_name,
        repeat($._data_description_clause)
      ),
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    redefines_clause: $ => seq(
      $._REDEFINES, $._identifier
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    // (no standalone user_defined_word rule; use inline alias for clarity)

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => /([xX](\([0-9]+\))?)+/,

    picture_9: $ => choice(
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
      seq(
        optional(token(/[sS]/)),
        repeat1($.p9p_group),
        optional(seq(token(/[vV]/), repeat($.p9p_group)))
      )
    ),
    p9p_group: $ => token(/[pP9](\([0-9]+\))?/),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_content)
    ),

    _procedure_division_content: $ => prec.right(choice(
      // Case 1: trailing statements group (with period) and optional statements
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        $._procedure_division_statements_before_header,
        repeat($._tail_statement)
      ),
      // Case 2: one or more (statements+period) followed by headers, finishing at a header
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        ))
      ),
      // Case 3: trailing simple statements only
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._tail_statement)
      )
    )),

    paragraph_header: $ => seq(
      field('name', choice($.area_a_word, $._WORD, $.integer)),
      '.'
    ),

    period: $ => '.',

    continue_statement: $ => $._CONTINUE,

    label: $ => choice(
      $.qualified_word,
      seq($._LITERAL, optional(seq($._in_of, $._LITERAL)))
    ),


    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_bool: $ => choice(
      $._expr_is,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    ge: $ => choice(
      seq(optional($._IS), '>='),
      seq(optional($._IS), $._NOT, '<'),
      seq(optional($._IS), $._GREATER, optional($._THAN), optional($._OR), $._EQUAL, optional($._TO)),
      seq(optional($._IS), $._NOT_LESS, optional($._THAN)),
    ),

    _x: $ => choice(
      seq($._LENGTH, optional($._OF), choice(
        $._identifier,
        $._basic_literal,
        $.function_)
      ),
      seq($._ADDRESS, optional($._OF), choice(
        seq(
          choice($._PROGRAM, $._ENTRY),
          choice($._identifier, $._LITERAL)),
        $._identifier,
      )),
      $._literal,
      $.function_,
      $.linage_counter,
      $._identifier,
    ),

    perform_statement_call_proc: $ => seq(
      $._PERFORM,
      field('procedure', $.perform_procedure),
      field('option', optional($.perform_option)),
    ),

    perform_statement_loop: $ => seq(
      $._PERFORM,
      field('option', optional($.perform_option)),
    ),

    perform_procedure: $ => seq(
      $.label,
      optional(seq(choice($._THRU, $._THROUGH), $.label)),
    ),

    perform_option: $ => choice(
      $.FOREVER,
      seq(field('times', $._id_or_lit_or_func), $._TIMES),
      seq(field('test', optional($.perform_test)), $._UNTIL, field('until', $.expr)),
      seq(field('test', optional($.perform_test)), $._VARYING, field('varying', sepBy($.perform_varying, $._AFTER)))
    ),

    _id_or_lit_or_func: $ => choice(
      $._identifier,
      $._LITERAL,
      $.function_
    ),

    perform_varying: $ => seq(
      $._identifier,
      $._FROM,
      field('from', $._x),
      $._BY,
      field('by', $._x),
      $._UNTIL,
      field('until', $.expr),
    ),

    string_statement: $ => seq(
      $._STRING,
      field('from', repeat1($.string_item)),
      $._INTO,
      field('into', $._identifier),
      optional($.with_pointer),
    ),

    string_item: $ => choice(
      $._x,
      seq($.DELIMITED, optional($._BY), choice($.SIZE, $._x)),
    ),

    unstring_statement: $ => seq(
      $._UNSTRING,
      field('x', $._identifier),
      optional($.unstring_delimited),
      $._INTO,
      repeat1($.unstring_into_item),
      optional($.with_pointer),
      optional($.unstring_tallying),
    ),

    unstring_delimited: $ => seq(
      $._DELIMITED,
      optional($._BY),
      repeat1($.unstring_delimited_item)
    ),

    unstring_delimited_item: $ => seq(
      optional($.ALL),
      field('x', $._simple_value)
    ),

    unstring_into_item: $ => seq(
      field('x', $._identifier),
      optional(seq(
        $._DELIMITER,
        optional($._IN),
        field('delimiter', $._identifier)
      )),
      optional(seq(
        $._COUNT,
        optional($._IN),
        field('count', $._identifier)
      )),
    ),

    _simple_value: $ => choice(
      $._identifier,
      $._basic_literal
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    _AFTER: $ => /[aA][fF][tT][eE][rR]/,
    _BY: $ => /[bB][yY]/,
    _CONTINUE: $ => /[cC][oO][nN][tT][iI][nN][uU][eE]/,
    _COUNT: $ => /[cC][oO][uU][nN][tT]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DELIMITED: $ => /[dD][eE][lL][iI][mM][iI][tT][eE][dD]/,
    _DELIMITER: $ => /[dD][eE][lL][iI][mM][iI][tT][eE][rR]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _EQUAL: $ => /[eE][qQ][uU][aA][lL]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _FROM: $ => /[fF][rR][oO][mM]/,
    _GREATER: $ => /[gG][rR][eE][aA][tT][eE][rR]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _ID_ABBR: $ => /[iI][dD]/,
    _IN: $ => /[iI][nN]/,
    _INTO: $ => /[iI][nN][tT][oO]/,
    _IS: $ => /[iI][sS]/,
    _NOT: $ => /[nN][oO][tT]/,
    _OR: $ => /[oO][rR]/,
    _PERFORM: $ => /[pP][eE][rR][fF][oO][rR][mM]/,
    _PIC: $ => /[pP][iI][cC]/,
    _PICTURE: $ => /[pP][iI][cC][tT][uU][rR][eE]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _REDEFINES: $ => /[rR][eE][dD][eE][fF][iI][nN][eE][sS]/,
    _SECTION: $ => /[sS][eE][cC][tT][iI][oO][nN]/,
    _STRING: $ => /[sS][tT][rR][iI][nN][gG]/,
    _THAN: $ => /[tT][hH][aA][nN]/,
    _THRU: $ => /([tT][hH][rR][uU])|[tT][hH][rR][oO][uU][gG][hH]/,
    _TIMES: $ => /[tT][iI][mM][eE][sS]/,
    _THRU: $ => /[tT][hH][rR][uU]/,
    _THROUGH: $ => /[tT][hH][rR][oO][uU][gG][hH]/,
    _TO: $ => /[tT][oO]/,
    _UNSTRING: $ => /[uU][nN][sS][tT][rR][iI][nN][gG]/,
    _UNTIL: $ => /[uU][nN][tT][iI][lL]/,
    _VARYING: $ => /[vV][aA][rR][yY][iI][nN][gG]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _WORKING_STORAGE: $ => /[wW][oO][rR][kK][iI][nN][gG]-[sS][tT][oO][rR][aA][gG][eE]/,
    _NOT_LESS: $ => /([nN][oO][tT][ \t]+(<|[lL][eE][sS][sS]))/,
